# BudgetMasterPWA

./: .replit  README.md  app.py  budget.db  database.py  generate_vapid_keys.py  pasted_text_1726488190902.txt  pyproject.toml  requirements.txt  service-worker.js
static/: manifest.json
static/css/: styles.css
static/js/: app.js  db.js  ui.js
templates/: index.html
